adding READme documentation

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -13,7 +13,7 @@
       "\n",
       "selected set is \n",
       "          image       clothes\n",
-      "0  00017_00.jpg  04131_00.jpg\n",
+      "0  05997_00.jpg  05830_00.jpg\n",
       "starting HR_Viton...\n",
       "shutingdown HR_Viton...\n"
      ]
@@ -22,33 +22,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-31 18:42:56,209 - INFO - Initializing pre-model(Gaussian model) ...\n",
-      "2024-07-31 18:42:57,627 - INFO - Initializing pre-model(Gaussian model) finished in 1417.23ms.\n",
-      "2024-07-31 18:42:57,628 - INFO - Initializing TSR (diffsusion 3D) model ...\n",
-      "2024-07-31 18:43:00,803 - INFO - Initializing TSR (diffsusion 3D) model finished in 3174.20ms.\n",
-      "2024-07-31 18:43:00,804 - INFO - Processing images ...\n",
-      "2024-07-31 18:43:30,140 - INFO - Processing images finished in 29336.10ms.\n",
-      "2024-07-31 18:43:30,141 - INFO - please wait this process might take a few minutes...\n",
-      "2024-07-31 18:43:30,142 - INFO - Running model ...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Open3D WARNING] [ViewControl] SetViewPoint() failed because window height and width are not set.\n",
-      "[Open3D WARNING] [ViewControl] SetViewPoint() failed because window height and width are not set.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-31 18:44:37,743 - INFO - Running model finished in 67601.00ms.\n",
-      "2024-07-31 18:44:37,744 - INFO - Rendering ...\n",
-      "2024-07-31 18:53:30,873 - INFO - Rendering finished in 533128.79ms.\n",
-      "2024-07-31 18:53:33,089 - INFO - Exporting mesh ...\n",
-      "2024-07-31 18:54:14,066 - INFO - Exporting mesh finished in 40977.36ms.\n"
+      "2024-07-31 20:15:30,219 - INFO - Initializing pre-model(Gaussian model) ...\n",
+      "2024-07-31 20:15:32,032 - INFO - Initializing pre-model(Gaussian model) finished in 1812.96ms.\n",
+      "2024-07-31 20:15:32,034 - INFO - Initializing TSR (diffsusion 3D) model ...\n",
+      "2024-07-31 20:15:35,827 - INFO - Initializing TSR (diffsusion 3D) model finished in 3792.79ms.\n",
+      "2024-07-31 20:15:35,828 - INFO - Processing images ...\n",
+      "2024-07-31 20:16:15,671 - INFO - Processing images finished in 39843.15ms.\n",
+      "2024-07-31 20:16:15,671 - INFO - please wait this process might take a few minutes...\n",
+      "2024-07-31 20:16:15,672 - INFO - Running model ...\n",
+      "2024-07-31 20:18:25,676 - INFO - Running model finished in 130003.46ms.\n",
+      "2024-07-31 20:18:25,677 - INFO - Rendering ...\n",
+      "2024-07-31 20:25:24,946 - INFO - Rendering finished in 419269.41ms.\n",
+      "2024-07-31 20:25:27,187 - INFO - Exporting mesh ...\n",
+      "2024-07-31 20:26:05,073 - INFO - Exporting mesh finished in 37885.72ms.\n"
      ]
     }
    ],
