updating demo note book

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -43,10 +43,12 @@
     "\n",
     "\"\"\"\n",
     "defualt vales are :\n",
-    "    chunk_size: int = 8192,\n",
-    "    padding: int = 16,\n",
-    "    foreground_ratio: float = 0.85,\n",
-    "    mc_resolution: int = 256,\n",
+    "    render: bool = False\n",
+    "    chunk_size: int = 8192, #check your VRAM\n",
+    "    padding: int = 16, #for CNN model padding\n",
+    "    foreground_ratio: float = 0.85, \n",
+    "    #for depth estimation of foreground and background\n",
+    "    mc_resolution: int = 256, #final mesh resloution\n",
     "\"\"\"\n",
     "sample = dif3D_Viton()\n",
     "sample.dif3d_viton_run(render=True)"
