comments added and checked before publish

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,7 @@
       "\n",
       "selected set is \n",
       "          image       clothes\n",
-      "0  05997_00.jpg  05830_00.jpg\n",
+      "0  10404_00.jpg  01248_00.jpg\n",
       "starting HR_Viton...\n",
       "shutingdown HR_Viton...\n"
      ]
@@ -22,19 +22,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-31 20:15:30,219 - INFO - Initializing pre-model(Gaussian model) ...\n",
-      "2024-07-31 20:15:32,032 - INFO - Initializing pre-model(Gaussian model) finished in 1812.96ms.\n",
-      "2024-07-31 20:15:32,034 - INFO - Initializing TSR (diffsusion 3D) model ...\n",
-      "2024-07-31 20:15:35,827 - INFO - Initializing TSR (diffsusion 3D) model finished in 3792.79ms.\n",
-      "2024-07-31 20:15:35,828 - INFO - Processing images ...\n",
-      "2024-07-31 20:16:15,671 - INFO - Processing images finished in 39843.15ms.\n",
-      "2024-07-31 20:16:15,671 - INFO - please wait this process might take a few minutes...\n",
-      "2024-07-31 20:16:15,672 - INFO - Running model ...\n",
-      "2024-07-31 20:18:25,676 - INFO - Running model finished in 130003.46ms.\n",
-      "2024-07-31 20:18:25,677 - INFO - Rendering ...\n",
-      "2024-07-31 20:25:24,946 - INFO - Rendering finished in 419269.41ms.\n",
-      "2024-07-31 20:25:27,187 - INFO - Exporting mesh ...\n",
-      "2024-07-31 20:26:05,073 - INFO - Exporting mesh finished in 37885.72ms.\n"
+      "2024-08-10 11:03:16,731 - INFO - Initializing pre-model(Gaussian model) ...\n",
+      "2024-08-10 11:03:18,389 - INFO - Initializing pre-model(Gaussian model) finished in 1657.96ms.\n",
+      "2024-08-10 11:03:18,389 - INFO - Initializing TSR (diffsusion 3D) model ...\n",
+      "2024-08-10 11:03:22,077 - INFO - Initializing TSR (diffsusion 3D) model finished in 3687.72ms.\n",
+      "2024-08-10 11:03:22,078 - INFO - Processing images ...\n",
+      "2024-08-10 11:03:29,276 - INFO - Processing images finished in 7198.34ms.\n",
+      "2024-08-10 11:03:29,278 - INFO - please wait this process might take a few minutes...\n",
+      "2024-08-10 11:03:29,279 - INFO - Running model ...\n",
+      "2024-08-10 11:04:03,916 - INFO - Running model finished in 34636.86ms.\n",
+      "2024-08-10 11:04:03,917 - INFO - Rendering ...\n",
+      "2024-08-10 11:11:10,922 - INFO - Rendering finished in 427004.50ms.\n",
+      "2024-08-10 11:11:13,223 - INFO - Exporting mesh ...\n",
+      "2024-08-10 11:11:43,359 - INFO - Exporting mesh finished in 30136.30ms.\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
     "    mc_resolution: int = 256, #final mesh resloution\n",
     "\"\"\"\n",
     "sample = dif3D_Viton()\n",
-    "sample.dif3d_viton_run(render=True)"
+    "sample.dif3d_viton_run(render=True, mc_resolution=512)"
    ]
   }
  ],
